tests/fixtures/invalid/str_rshift_dict.py
# Cannot right shift Str and Dict[str, int]
x: str = "hello" >> {"a": 1}
